--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.registrarse,
+.inicio-sesion {
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: linear-gradient(to right, #00bb38, #00641e); /* Fondo de degradado */
 }
 
-.App-link {
-  color: #61dafb;
+.register-form,
+.login-form {
+  background-color: #ffffff; 
+  padding: 30px; 
+  border-radius: 20px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  max-width: 500px; 
+  width: 100%; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  text-align: center; 
+  color: #333; 
+  font-family: 'Arial', sans-serif; 
+}
+
+button {
+  transition: background-color 0.3s ease, transform 0.2s ease; /* Transición suave */
+  width: 100%; 
+}
+
+button:hover {
+  background-color: #0056b3; 
+}
+
+.alert {
+  margin-bottom: 1rem;
+  font-weight: bold;
+}
+
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Tipografía más moderna */
+}
+
+.registro {
+  margin-top: 15px;
+  text-align: center; 
+}
+
+.registro a {
+  color: blue;
+  text-decoration: underline; 
 }
