--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.sidebar{
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  z-index: 1000; 
+}
+
 .registrarse,
 .inicio-sesion {
   height: 100vh;
@@ -49,4 +57,83 @@ body {
 .registro a {
   color: blue;
   text-decoration: underline; 
+}
+
+.background-container {
+  position: relative; /* Para que el degradado se posicione correctamente */
+  height: 100vh; /* Ajusta según lo necesites */
+  overflow: hidden; /* Para evitar desbordamiento */
+  background-image: url('../public/images/fondo.jpg'); /* Reemplaza con la ruta de tu imagen */
+  background-size: contain; /* Asegura que la imagen cubra todo el contenedor */
+  background-position: left center; 
+  background-repeat: no-repeat;
+  z-index: 0;
+}
+
+.gradient-container {
+  position: relative;
+  display: flex;
+  height: 100%;
+  z-index: 1; 
+}
+
+.left-column, .right-column {
+  padding: 150px;
+  display: block !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+
+.gradient-overlay {
+  position: absolute;
+  top: 0;
+  left: 20%; 
+  width: 80%; 
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%,  rgba(255, 255, 255, 0.8) 40%, rgba(255, 255, 255, 1) 45%, rgba(255, 255, 255, 1) 100%);
+}
+
+@media (max-width: 1024px) {
+
+  .background-container {
+    position: relative; 
+    height: 60vh;
+    width: auto;
+    overflow: hidden; 
+    background-image: url('../public/images/fondo.jpg'); 
+    background-size: cover; 
+    background-position: left center;
+    z-index: 0;
+  }
+
+  .gradient-container {
+    position: relative;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    align-items: stretch;
+    z-index: 1;
+  }
+
+  .left-column {
+    flex: 0 0 auto;
+    width: 100%;
+    height: 60%;
+  }
+
+  
+  .right-column {
+    flex: 0 0 auto;
+    width: 100%;
+    height: 40%;
+  }
+
+  .gradient-overlay {
+    position: relative;
+    left: 0%;
+    width: 100%;
+    z-index: -1;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 1) 100%);
+  }
 }
